Undo overflow:hidden on .items class (IE6 issues)

--- a/themes/xyz5.css
+++ b/themes/xyz5.css
@@ -35,7 +35,6 @@ div.mainbody {
 div.item {
 	clear: both;
 	border-bottom: 1px solid #ccc;
-	overflow: hidden;
 }
 
 /*Container for editor*/
